# RCompiler

./: CMakeLists.txt  Makefile  ProblemsAllInOne.md  README.md  main.cpp  test_ir.sh
.ci/: run_official_semantic_tests.sh  run_official_semantic_tests_2.sh  run_parser_tests.sh  run_semantic_tests.sh
.ci/Lexer/: in04.rs  in07.rs  in10.rs
.ci/Parser/: in01.rs  in05.rs
.github/workflows/: phased-testing.yml
error/: Error.h
include/AST/: ASTNode.h  ASTVisitor.h  Type.h
include/ASTNode/: ASTNode.h
include/IR/: IRBasicBlock.h  IRBlock.h  IRBuilder.h  IRConst.h  IRFunction.h  IRInstruction.h  IRLiteral.h  IRManager.h  IRNode.h  IRProgram.h  IRType.h  IRUser.h  IRValue.h  IRVar.h  IRVisitor.h
include/InstSelection/: ASMBlock.h  ASMFunction.h  ASMGlobalVariable.h  ASMInstruction.h  ASMModule.h  ASMNode.h  ASMOperand.h  InstSelector.h  RegAllocator.h  StackAllocator.h
include/Lexer/: Lexer.h  Token.h  TokenType.h
include/Parser/: Parser.h
include/Preprocessor/: Preprocessor.h
include/Semantic/: ASTNode.h  ASTVisitor.h  ConstEvaluator.h  Scope.h  ScopeManager.h  SemanticChecker.h  Symbol.h  SymbolCollector.h  SymbolManager.h  Type.h  TypeManager.h
src/AST/: ASTNode.cpp  ASTVisitor.cpp
src/ASTNode/: ASTNode.cpp
src/IR/: IRBuilder.cpp
src/InstSelection/: InstSelector.cpp  StackAllocator.cpp
src/Lexer/: Lexer.cpp  Token.cpp
src/Parser/: Parser.cpp
src/Preprocessor/: Preprocessor.cpp
src/Semantic/: ASTNode.cpp  ASTVisitor.cpp  ConstEvaluator.cpp  ScopeManager.cpp  SemanticChecker.cpp  SymbolCollector.cpp  SymbolManager.cpp  Type.cpp
testcases/IR/: array01.rx  array02.rx  array03.rx  array04.rx  array05.rx  array06.rx  assign02.rx  assign03.rx  assign04.rx  autoref01.rx  builtin01.rx  const01.rx  const02.rx  expression01.rx  expression02.rx  function01.rx  function02.rx  function03.rx  function04.rx  function05.rx  if01.rx  if02.rx  if03.rx  if04.rx  if05.rx  impl01.rx  impl02.rx  let01.rx  loop01.rx  loop02.rx  pointer01.rx  pointer02.rx  return01.rx  return02.in  return02.rx  return03.rx  struct01.rx  struct02.rx  struct03.rx  struct04.rx  (+2 more)
testcases/InstSelection/: assign01.rx  assign02.rx  function01.rx  if01.rx
testcases/Lexer/: in01.txt  in02.rs  in03.rx  in03.txt  in05.txt  in06.rx  in08.rx  in09.rs  in10.txt
testcases/Parser/: in00.rs  in01.rs  in02.rx  in03.rs  in04.rs  in06.rx  in07.rx  in08.rx  in09.rx  in10.rx  in11.rx  in12.rx  in13.rx  in14.rx  in15.rx  in16.rx
testcases/Semantic/: in00.rx  in01.rx  in02.rs  in02.rx  in03.rx  in04.rx  in05.rx  in06.rx  in07.rx  in08.rx  in09.rx  in10.rx  in11.rx  in12.rx  in13.rx  in14.rx  in15.rx  in16.rx  in17.rx  in18.rx  in19.rx  in20.rx  in21.rx  in22.rx  in23.rx  in24.rx  in25.rx  in26.rx  in27.rx  in28.rx  in29.rx  in30.rx  in31.rx  in32.rx  in33.rx  in34.rx  in35.rx  in36.rx
testcases_official/IR-1/misc1/: testcase_info.json
testcases_official/Semantic/: array03.rx  array07.rx  array08.rx  if01.rx  if02.rx  if03.rx  if04.rx  if05.rx  if06.rx  if07.rx  if08.rx  if09.rx  if10.rx  if11.rx  if12.rx  if13.rx  if14.rx  if15.rx  loop01.rx  loop02.rx  loop03.rx  loop04.rx  loop05.rx  loop06.rx  loop07.rx  loop08.rx
testcases_official/semantic-1/array1/: testcase_info.json
testcases_official/semantic-1/array2/: testcase_info.json
testcases_official/semantic-1/array3/: testcase_info.json
testcases_official/semantic-1/array4/: testcase_info.json
testcases_official/semantic-1/array5/: testcase_info.json
util/: Position.h  Util.h
(+396 files in other folders)
